# led_shifter

./: Cargo.toml  Makefile  Xargo.toml  zynq7020_mini.xdc
src/: counter.rs  lib.rs  main.rs  state.rs
synth/verilog/: top.v
